fix table overflow

--- a/Install/Application/Backend/Themes/Default/css/backend-small.scss
+++ b/Install/Application/Backend/Themes/Default/css/backend-small.scss
@@ -17,8 +17,10 @@ body {
 main {
     display: flex;
     flex-direction: column;
+    max-width: 100%;
     height: 100%;
     background: var(--main-background);
+    overflow-x: auto; /* required for table overflow, otherwise tables in the portlet cause overflows */
 
     flex: 1;
     box-sizing: border-box;
